--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     constructed
                     house for a fixed duration of time, usually around three months.<br>
                 </p>
-                     <button class="cn"><a href="https://www.jiocinema.com">JOIN US</a></button><br><br>
+                     <button class="cn"><a href="https://www.jiocinema.com/">JOIN US</a></button><br><br>
                      <img src="biggboss.jpg" height="350px" width="650">
 
                     <div class="form">
