--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <input type ="password" name=""placeholder="Enter Password Here">
                         <button class="btnn"><a href="#">login</button>
                         <button class="reset"><a href ="#">Reset</button>
-                        <button class ="ForgotPassword"><a href ="forgot.html.html/forgot.html.html">Forgot Password</button>
+                        <button class ="ForgotPassword"><a href ="forgot.html.html">Forgot Password</button>
                         
                         <p class="link">don't have account<br>
                         <a href ="index.html">sign up </a> here</a></p>
